more CI testing config